fixed missing padding for contacts with long names

--- a/src/app/client/context/network/contactDetailsDialog/contactDetailsDialog.component.css
+++ b/src/app/client/context/network/contactDetailsDialog/contactDetailsDialog.component.css
@@ -42,3 +42,7 @@
 ul.section-row {
   padding-bottom: 0;
 }
+
+.padding-left {
+  padding-left: 20px;
+}
